Working with API file management (add folder, rename, delete)

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "@nicky-lenaers/ngx-scroll-to": "^1.1.1",
     "@types/chart.js": "^2.7.40",
     "angular-bootstrap-md": "^6.2.6",
