--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ngx-bootstrap": "^3.1.2",
+    "ngx-filter-pipe": "^2.1.2",
     "ngx-toastr": "^9.1.1",
     "rxjs": "~6.3.3",
     "uuid": "^3.3.2",
