--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "hammerjs": "^2.0.8",
     "ngx-bootstrap": "^3.1.2",
     "ngx-filter-pipe": "^2.1.2",
+    "ngx-order-pipe": "^2.0.2",
+    "ngx-perfect-scrollbar": "^7.1.0",
     "ngx-toastr": "^9.1.1",
     "rxjs": "~6.3.3",
     "uuid": "^3.3.2",
