--- a/package.json
+++ b/package.json
@@ -12,41 +12,42 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0-beta.5",
-    "@angular/animations": "^7.0.4",
-    "@angular/common": "^7.0.4",
-    "@angular/compiler": "^7.0.4",
-    "@angular/core": "^7.0.4",
-    "@angular/forms": "^7.0.4",
-    "@angular/http": "^7.0.4",
-    "@angular/platform-browser": "^7.0.4",
-    "@angular/platform-browser-dynamic": "^7.0.4",
-    "@angular/router": "^7.0.4",
-    "@ng-bootstrap/ng-bootstrap": "^4.0.1",
+    "@angular/animations": "^7.2.4",
+    "@angular/common": "^7.2.4",
+    "@angular/compiler": "^7.2.4",
+    "@angular/core": "^7.2.4",
+    "@angular/forms": "^7.2.4",
+    "@angular/http": "^7.2.4",
+    "@angular/platform-browser": "^7.2.4",
+    "@angular/platform-browser-dynamic": "^7.2.4",
+    "@angular/router": "^7.2.4",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.2",
     "@nicky-lenaers/ngx-scroll-to": "^1.1.1",
     "@types/chart.js": "^2.7.42",
-    "angular-bootstrap-md": "^6.3.0",
-    "angular5-csv": "^0.2.10",
+    "angular-bootstrap-md": "^7.4.0",
+    "angular5-csv": "^0.2.11",
     "bootstrap": "^4.2.1",
     "chart.js": "^2.7.3",
-    "core-js": "^2.6.1",
-    "font-awesome": "^4.7.0",
+    "core-js": "^2.6.3",
     "hammerjs": "^2.0.8",
-    "ngx-bootstrap": "^3.1.4",
+    "ngx-bootstrap": "^3.2.0",
     "ngx-filter-pipe": "^2.1.2",
     "ngx-order-pipe": "^2.0.2",
-    "ngx-perfect-scrollbar": "^7.1.0",
+    "ngx-perfect-scrollbar": "^7.2.0",
     "ngx-scroll-event": "^1.0.8",
-    "ngx-toastr": "^9.1.1",
+    "ngx-toastr": "^9.1.2",
     "rxjs": "~6.3.3",
     "uuid": "^3.3.2",
-    "zone.js": "~0.8.26"
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.10.7",
-    "@angular/cli": "^7.1.4",
-    "@angular/compiler-cli": "^7.1.4",
-    "@angular/language-service": "^7.1.4",
-    "@types/jasmine": "^2.8.14",
+    "@angular/cli": "^7.3.0",
+    "@angular/compiler-cli": "^7.2.4",
+    "@angular/language-service": "^7.2.4",
+    "@fortawesome/fontawesome-free": "^5.7.1",
+    "@fortawesome/free-solid-svg-icons": "^5.7.1",
+    "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
