--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "chart.js": "^2.7.3",
     "core-js": "^2.6.3",
     "hammerjs": "^2.0.8",
+    "jsonp": "^0.2.1",
     "ngx-bootstrap": "^3.2.0",
     "ngx-filter-pipe": "^2.1.2",
     "ngx-order-pipe": "^2.0.2",
     "ngx-perfect-scrollbar": "^7.2.0",
+    "ngx-quill": "^4.6.10",
     "ngx-scroll-event": "^1.0.8",
     "ngx-toastr": "^9.1.2",
+    "quill": "^1.3.6",
     "rxjs": "~6.3.3",
     "uuid": "^3.3.2",
     "zone.js": "^0.8.29"
